# fenrir-rs

./: .envrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  STYLEGUIDE.md  docker-compose.yml  loki_config.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bugs.yml  enhancement.yml  security.yml
.github/workflows/: build.yml  docs.yml
docker/: Dockerfile.nginx  loki_config.yml  loki_config_auth.yml  nginx-basic-auth.conf  run_nginx.sh
examples/: simple-fern-logging.rs  simple-logging-reqwest.rs  simple-logging-with-auth.rs  simple-logging.rs  structured-logging.rs
src/: lib.rs  noop.rs  reqwest.rs  ureq.rs
