[package]
name = "fenrir-rs"
version = "0.5.1"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
repository = "https://github.com/flying7eleven/fenrir-rs"
description = "Fenrir is a create for using logi for log aggregation which can be used with a logging framework like fern."
keywords = ['loki', 'logging', 'log', 'logfmt']
categories = ['development-tools::debugging']
readme = "README.md"
license = "MIT"
rust-version = "1.60.0"

[dependencies.log]
version = "0.4.18"
default-features = false

[dependencies.url]
version = "2.3.1"
default-features = false

[dependencies.serde]
version = "1.0.163"
default-features = false
features = ["std", "derive"]

[dependencies.base64]
version = "0.22.1"
default-features = false
features = ["std"]

[dependencies.parking_lot]
version = "0.12.1"

[dependencies.serde_json]
version = "1.0.96"
default-features = false
features = ["std"]
optional = true

[dependencies.ureq]
version = "2.6.2"
default-features = false
optional = true

[dependencies.reqwest]
version = "0.11.18"
default-features = false
optional = true

[dependencies.tokio]
version = "1.28.2"
default-features = false
optional = true

[dev-dependencies.value-bag]
version = "1.4.1"
default-features = false

[dev-dependencies.fern]
version = "0.6.2"
default-features = false

[dev-dependencies.humantime]
version = "2.1.0"
default-features = false

[dev-dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "macros"]

[features]
default = ["ureq", "json"]
ureq = ["dep:ureq"]
reqwest-async = ["dep:reqwest", "async-tokio"]
async-tokio = ["tokio", "tokio/rt"]
json = ["dep:serde_json"]
structured_logging = ["log/kv_unstable_std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[[example]]
name = "simple-logging"
required-features = ["ureq", "json"]

[[example]]
name = "simple-logging-reqwest"
required-features = ["reqwest-async", "json"]

[[example]]
name = "simple-logging-with-auth"
required-features = ["ureq", "json"]

[[example]]
name = "simple-fern-logging"
required-features = ["ureq", "json"]

[[example]]
name = "structured-logging"
required-features = ["ureq", "json", "structured_logging"]